[gd_scene load_steps=5 format=3 uid="uid://c3f86pv0can01"]

[ext_resource type="Script" uid="uid://d4lt20s0e5gkc" path="res://Scripts/UI/RightPanel/properties_script.gd" id="1_q3kfe"]
[ext_resource type="Script" uid="uid://181yhrus3jhb" path="res://Scripts/UI/Others/Spinboxes.gd" id="1_tcd20"]
[ext_resource type="Script" uid="uid://dy1cd6xda1pu5" path="res://UI/BetterSlider/BetterToggles.gd" id="2_7ymxr"]
[ext_resource type="PackedScene" uid="uid://djud66j0a78qo" path="res://UI/EditorUI/RightUI/Components/MiniComponents/assets_box.tscn" id="4_recil"]

[node name="Properties" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="PropertiesScript" type="Node" parent="."]
script = ExtResource("1_q3kfe")

[node name="Scroll" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Scroll/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TR_LAYOUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Layouts" type="GridContainer" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HBox3" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PosXLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox3"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "TR_POS_X"

[node name="PosXSpinBox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1e+09
max_value = 1e+09
step = 0.1
script = ExtResource("1_tcd20")

[node name="HBox" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PosYLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "TR_POS_Y"

[node name="PosYSpinBox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1e+09
max_value = 1e+09
step = 0.1
script = ExtResource("1_tcd20")

[node name="HBox12" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ZOrderLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox12"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "TR_Z_ORDER"

[node name="ZOrderSpinbox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox12"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -9999.0
max_value = 9999.0
script = ExtResource("1_tcd20")

[node name="HBox4" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2

[node name="RotLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox4"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "TR_ROTATION"

[node name="RotSpinBox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -360.0
max_value = 360.0
step = 0.05
script = ExtResource("1_tcd20")

[node name="HBox5" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OffsetXLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "TR_OFFSET_X"

[node name="OffsetXSpinBox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -99999.0
max_value = 99999.0
step = 0.1
script = ExtResource("1_tcd20")

[node name="HBox6" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2

[node name="OffsetYLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "TR_OFFSET_Y"

[node name="OffsetYSpinBox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -99999.0
max_value = 99999.0
step = 0.1

[node name="HBox8" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SizeLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox8"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "TR_SIZE_X"

[node name="SizeSpinBox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox8"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
step = 0.1
value = 1.0
script = ExtResource("1_tcd20")

[node name="HBox7" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SizeYLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox7"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 15
text = "TR_SIZE_X"

[node name="SizeSpinYBox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/Layouts/HBox7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
step = 0.1
value = 1.0
script = ExtResource("1_tcd20")

[node name="HBox2" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Layouts"]
layout_mode = 2

[node name="Sp3" type="HSeparator" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label2" type="Label" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TR_VISIBILITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Visibilty" type="GridContainer" parent="Scroll/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 5
columns = 2

[node name="Hbox" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Visibilty/Hbox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "TR_COLOR"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Scroll/MarginContainer/VBoxContainer/Visibilty/Hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorLabel2" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Visibilty/HBoxContainer"]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "TR_TINT"

[node name="TintPickerButton" type="ColorPickerButton" parent="Scroll/MarginContainer/VBoxContainer/Visibilty/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 1)

[node name="Visible" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_VISIBLE"

[node name="HBox2" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlendModeLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Visibilty/HBox2"]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "TR_BLEND_LABEL"

[node name="BlendMode" type="OptionButton" parent="Scroll/MarginContainer/VBoxContainer/Visibilty/HBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 7
popup/item_0/text = "TR_BLEND_NORMAL"
popup/item_0/id = 0
popup/item_1/text = "TR_BLEND_ADD"
popup/item_1/id = 1
popup/item_2/text = "TR_BLEND_SUBTRACT"
popup/item_2/id = 2
popup/item_3/text = "TR_BLEND_MULTIPLY"
popup/item_3/id = 3
popup/item_4/text = "TR_BLEND_BURN"
popup/item_4/id = 4
popup/item_5/text = "TR_BLEND_HARDMIX"
popup/item_5/id = 5
popup/item_6/text = "TR_BLEND_CURSED"
popup/item_6/id = 6

[node name="FlipSpriteH" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_FLIP_H"

[node name="FlipSpriteV" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_FLIP_V"

[node name="ClipChildren" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_CLIP_CHILDREN"

[node name="HiddenItem" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Visibilty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "If toggled, the current Object will be hidden when viewed outside the editor."
theme_override_font_sizes/font_size = 16
text = "TR_HIDDEN_ITEM"
script = ExtResource("2_7ymxr")
sp_type = ""
value_to_update = "hidden_item"

[node name="HSeparator" type="HSeparator" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TR_REACTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reactions" type="GridContainer" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "TR_SHOULD_BLINK"

[node name="EyeOption" type="OptionButton" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "TR_DISABLED"
popup/item_0/id = 0
popup/item_1/text = "TR_OPEN"
popup/item_1/id = 1
popup/item_2/text = "TR_CLOSED"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "TR_SHOULD_TALK"

[node name="MouthOption" type="OptionButton" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "TR_DISABLED"
popup/item_0/id = 0
popup/item_1/text = "TR_OPEN"
popup/item_1/id = 1
popup/item_2/text = "TR_CLOSED"
popup/item_2/id = 2

[node name="IgnoreBounce" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_IGNORE_BOUNCE"
script = ExtResource("2_7ymxr")
sp_type = ""
value_to_update = "ignore_bounce"

[node name="Physics" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_PHYSICS"
script = ExtResource("2_7ymxr")
sp_type = ""
value_to_update = "physics"

[node name="StaticObjectToggle" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
layout_mode = 2
size_flags_horizontal = 3
text = "TR_STATIC_OBJECT"
script = ExtResource("2_7ymxr")
sp_type = ""
value_to_update = "static_obj"

[node name="UseMouseVel" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/Reactions"]
layout_mode = 2
size_flags_horizontal = 3
text = "TR_MOUSE_VELOCITY"
script = ExtResource("2_7ymxr")
sp_type = ""
value_to_update = "follow_mouse_velocity"

[node name="Sp6" type="HSeparator" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AssetsBox" parent="Scroll/MarginContainer/VBoxContainer" instance=ExtResource("4_recil")]
layout_mode = 2

[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox3/PosXSpinBox" to="PropertiesScript" method="_on_pos_x_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox/PosYSpinBox" to="PropertiesScript" method="_on_pos_y_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox12/ZOrderSpinbox" to="PropertiesScript" method="_on_z_order_spinbox_value_changed"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox4/RotSpinBox" to="PropertiesScript" method="_on_rot_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox5/OffsetXSpinBox" to="PropertiesScript" method="_on_offset_x_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox6/OffsetYSpinBox" to="PropertiesScript" method="_on_offset_y_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox8/SizeSpinBox" to="PropertiesScript" method="_on_size_spin_box_value_changed"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/Layouts/HBox7/SizeSpinYBox" to="PropertiesScript" method="_on_size_spin_y_box_value_changed"]
[connection signal="color_changed" from="Scroll/MarginContainer/VBoxContainer/Visibilty/Hbox/ColorPickerButton" to="PropertiesScript" method="_on_color_picker_button_color_changed"]
[connection signal="focus_entered" from="Scroll/MarginContainer/VBoxContainer/Visibilty/Hbox/ColorPickerButton" to="PropertiesScript" method="_on_color_picker_button_focus_entered"]
[connection signal="focus_exited" from="Scroll/MarginContainer/VBoxContainer/Visibilty/Hbox/ColorPickerButton" to="PropertiesScript" method="_on_color_picker_button_focus_exited"]
[connection signal="color_changed" from="Scroll/MarginContainer/VBoxContainer/Visibilty/HBoxContainer/TintPickerButton" to="PropertiesScript" method="_on_tint_picker_button_color_changed"]
[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/Visibilty/Visible" to="PropertiesScript" method="_on_visible_toggled"]
[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/Visibilty/FlipSpriteH" to="PropertiesScript" method="_on_flip_sprite_h_toggled"]
[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/Visibilty/FlipSpriteV" to="PropertiesScript" method="_on_flip_sprite_v_toggled"]
[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/Visibilty/ClipChildren" to="PropertiesScript" method="_on_clip_children_toggled"]
[connection signal="item_selected" from="Scroll/MarginContainer/VBoxContainer/Reactions/EyeOption" to="PropertiesScript" method="_on_eye_option_item_selected"]
[connection signal="item_selected" from="Scroll/MarginContainer/VBoxContainer/Reactions/MouthOption" to="PropertiesScript" method="_on_mouth_option_item_selected"]
